@ethersproject modules add: solidity, contracts, networks and providers. @uniswap/sdk is added also

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 npm install -g truffle
 npm install web3
 npm i dotenv
+#npm install  @ethersproject
+#npm install -g solc
+npm i @ethersproject/solidity
+npm i @ethersproject/contracts
+npm i @ethersproject/networks
+npm i @ethersproject/providers
+npm i @uniswap/sdk
