--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethersproject/contracts": "^5.1.1",
+    "@ethersproject/networks": "^5.1.0",
+    "@ethersproject/providers": "^5.1.2",
+    "@ethersproject/solidity": "^5.1.0",
+    "@studydefi/money-legos": "^2.4.2",
+    "@uniswap/sdk": "^3.0.3",
     "dotenv": "^8.2.0",
-    "web3": "^1.3.4"
+    "web3": "^1.3.5"
   }
 }
